# celestia-adapter-evaluator

./: .gitignore  CHEATSHEET.md  Cargo.toml  LICENSE  README.md
src/: core.rs  main.rs
